[bumpversion]
current_version = 1.2.2
commit = False
tag = True
tag_name = v{new_version}

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:multi_api_mocker/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
max-line-length = 88

[tool:pytest]
addopts = --ignore=setup.py

[coverage:run]
omit = 
	tests/*

[options.entry_points]
pytest11 = 
	multi_api_mocker = multi_api_mocker.contrib.pytest_plugin
